; ModuleID = '/home/carl/AnghaBench/libgit2/fuzzers/extr_download_refs_fuzzer.c_fuzzer_subtransport_new.c'
source_filename = "/home/carl/AnghaBench/libgit2/fuzzers/extr_download_refs_fuzzer.c_fuzzer_subtransport_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuzzer_subtransport = type { %struct.TYPE_3__, %struct.TYPE_4__, i32* }
%struct.TYPE_3__ = type { i32, i32, i32 }
%struct.TYPE_4__ = type { i32, i32 }
%struct.fuzzer_buffer = type { i32, i32 }

@fuzzer_subtransport_action = common dso_local global i32 0, align 4
@fuzzer_subtransport_close = common dso_local global i32 0, align 4
@fuzzer_subtransport_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fuzzer_subtransport**, i32*, %struct.fuzzer_buffer*)* @fuzzer_subtransport_new to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fuzzer_subtransport_new(%struct.fuzzer_subtransport** %0, i32* %1, %struct.fuzzer_buffer* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.fuzzer_subtransport**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.fuzzer_buffer*, align 8
  %8 = alloca %struct.fuzzer_subtransport*, align 8
  store %struct.fuzzer_subtransport** %0, %struct.fuzzer_subtransport*** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.fuzzer_buffer* %2, %struct.fuzzer_buffer** %7, align 8
  %9 = call %struct.fuzzer_subtransport* @malloc(i32 32)
  store %struct.fuzzer_subtransport* %9, %struct.fuzzer_subtransport** %8, align 8
  %10 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %8, align 8
  %11 = icmp ne %struct.fuzzer_subtransport* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %43

13:                                               ; preds = %3
  %14 = load i32*, i32** %6, align 8
  %15 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %8, align 8
  %16 = getelementptr inbounds %struct.fuzzer_subtransport, %struct.fuzzer_subtransport* %15, i32 0, i32 2
  store i32* %14, i32** %16, align 8
  %17 = load %struct.fuzzer_buffer*, %struct.fuzzer_buffer** %7, align 8
  %18 = getelementptr inbounds %struct.fuzzer_buffer, %struct.fuzzer_buffer* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %8, align 8
  %21 = getelementptr inbounds %struct.fuzzer_subtransport, %struct.fuzzer_subtransport* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 1
  store i32 %19, i32* %22, align 4
  %23 = load %struct.fuzzer_buffer*, %struct.fuzzer_buffer** %7, align 8
  %24 = getelementptr inbounds %struct.fuzzer_buffer, %struct.fuzzer_buffer* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %8, align 8
  %27 = getelementptr inbounds %struct.fuzzer_subtransport, %struct.fuzzer_subtransport* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  store i32 %25, i32* %28, align 4
  %29 = load i32, i32* @fuzzer_subtransport_action, align 4
  %30 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %8, align 8
  %31 = getelementptr inbounds %struct.fuzzer_subtransport, %struct.fuzzer_subtransport* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %31, i32 0, i32 2
  store i32 %29, i32* %32, align 8
  %33 = load i32, i32* @fuzzer_subtransport_close, align 4
  %34 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %8, align 8
  %35 = getelementptr inbounds %struct.fuzzer_subtransport, %struct.fuzzer_subtransport* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 1
  store i32 %33, i32* %36, align 4
  %37 = load i32, i32* @fuzzer_subtransport_free, align 4
  %38 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %8, align 8
  %39 = getelementptr inbounds %struct.fuzzer_subtransport, %struct.fuzzer_subtransport* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 0
  store i32 %37, i32* %40, align 8
  %41 = load %struct.fuzzer_subtransport*, %struct.fuzzer_subtransport** %8, align 8
  %42 = load %struct.fuzzer_subtransport**, %struct.fuzzer_subtransport*** %5, align 8
  store %struct.fuzzer_subtransport* %41, %struct.fuzzer_subtransport** %42, align 8
  store i32 0, i32* %4, align 4
  br label %43

43:                                               ; preds = %13, %12
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local %struct.fuzzer_subtransport* @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
